simple/test/features/errors/semantic/e1034_unresolved_import.spl
# E1034: Unresolved Import

Feature: E1034 - Unresolved Import
  As a Simple compiler
  I want to detect imports that cannot be resolved
  So that all imports are valid

  Background:
    Given I have the Simple compiler

  Scenario: Importing non-existent item
    When I compile:
      '''
      use std::collections::NonExistent  # Error: item doesn't exist
      '''
    Then I should see error E1034 at line 1
    And the error message should be "cannot find `{name}` in module `{module}`"
    And the label should indicate "import not found"
    And the help should suggest "check the module path and ensure the item is exported"

  Scenario: Importing from non-existent module
    When I compile:
      '''
      use nonexistent::module::Item  # Error: module doesn't exist
      '''
    Then I should see error E1034

  Scenario: Importing private item
    When I compile:
      '''
      mod mymod:
        fn private_function():  # Not pub
          # implementation

      use mymod::private_function  # Error: private
      '''
    Then I should see error E1034 or E1040

  Scenario: Valid import
    When I compile:
      '''
      use std::collections::HashMap
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      use std::nonexistent::Item
      '''
    Then I should see error E1034
    And the error message should contain "해결되지 않은 임포트"
